apps/home-automation/home-assistant/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-external
  namespace: home-automation
  labels:
    external-dns.edgard.org/scope: external
spec:
  parentRefs:
  - name: external
    namespace: platform-system
    sectionName: https
  hostnames:
  - home-assistant.edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: home-assistant
      port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-internal
  namespace: home-automation
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
  - name: internal
    namespace: platform-system
    sectionName: https
  hostnames:
  - home-assistant.edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: home-assistant
      port: 8123
